# odata-experiments

./: .gitignore  LICENSE.md  README.md  pyproject.toml
ldap/: config.cfg
src/odata_exp/: __init__.py
src/odata_exp/data/: __init__.py  depots.geojson
src/odata_exp/templates/: odata-metadata.j2.xml
