[tool.poetry]
name = "odata-exp"
version = "0.1.0"
description = "OData experiments"
authors = ["Felix Fennell <felnne@bas.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
fastapi = "^0.94.0"
geojson = "^3.0.1"
inflect = "^6.0.2"
jinja2 = "^3.1.2"
psycopg2 = "^2.9.5"
python = ">=3.11,<3.12"
shapely = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
uvicorn = "^0.21.0"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = ''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
